--- a/estilo2.css
+++ b/estilo2.css
@@ -60,9 +60,56 @@ h3 {
 	border-radius: 25px;
 	font-size: 18px;
 	color: #F24706;
-	width: 40%;
-	height: 30px;
+
 	outline: none;
+}
+
+h4{	
+	text-align: left;
+	padding: 0 0 20px 0;
+	margin-top: 40px;
+	font-size: 35px;
+	color: #050326;
+	outline: none;
+}
+h5{	
+	text-align: left;
+	padding: 0 0 20px 0;
+	margin-top: 5px;
+	font-size: 20px;
+	color: #050326;
+	outline: none;
+}
+
+.calificaciones td {
+	text-align: center;
+	margin-top: 20px;
+	width: 40%;
+	height: 70px;
+	border: 1px solid #F24706;
+	border-radius: 0px;
+	font-size: 12px;
+	color: black;
+}
+.calificaciones th {
+	text-align: center;
+	margin-top: 20px;
+	width: 40%;
+	height: 70px;
+	border: 1px solid #F24706;
+	border-radius: 0px;
+	font-size: 18px;
+	color: black;
+}
+.rrss{	
+
+	width: 20px;
+	height: 20px;
+	background: white;
+	border: 1px solid black;
+	color: white;
+	outline: none ;
+	padding: 10px;margin-left: 10px;
 }
 .hojasdevida.html h3 {	
 	text-align: center;
@@ -75,38 +122,11 @@ h3 {
 	height: 30px;
 	outline: none;
 }
-h4{	
-	text-align: left;
-	padding: 0 0 20px 0;
-	margin-top: 40px;
-	font-size: 35px;
-	color: #050326;
-	outline: none;
-}
+.fotofh	{
+	width: 270px;
+	height: 350px;
+}	
 
-.rrss{	
-
-	width: 20px;
-	height: 20px;
-	background: white;
-	border: 1px solid black;
-	color: white;
-	outline: none ;
-	padding: 10px;margin-left: 10px;
-}
-.contenido{
-	display: flex;
-	margin: 60px;
-}
-.articulos{
-	width: 80%;
-	border-right: 3px solid black;
-}
-.secciones{
-	display: flex;
-	align-items: center;
-	padding: 40px;
-}
 .menu-secundario{
 	width: 100%;
 	margin-top: 40px;
